# plate-recognition

./: .gitignore  README.md  pyproject.toml
core-model/: README.md  main.ipynb  ocr_try.ipynb
core-model/exp5/: opt.yaml  results.csv
libraries/keras/: README.md  auto.jpg:Zone.Identifier  config.yaml  labels.json  plate.yaml  sandbox.ipynb  train.txt  val.txt
libraries/keras/temp_data/: annotations.pkl  labels.pkl
libraries/pytorch/: README.md  sandbox.ipynb
libraries/scikit-learn/: Untitled.ipynb  sandbox.ipynb
libraries/tensorflow/: .gitignore  README.md  dataset_split.py  download_labels.py  read_labels.py  sandbox.ipynb
ocr/: ocr.ipynb
plate_scraper/: scrapy.cfg
plate_scraper/plate_scraper/: items.json  middlewares.py  pipelines.py  settings.py
plate_scraper/plate_scraper/spiders/: main.py
prepare-data/: main.ipynb  val.txt
snippets/: dataset_split.py  download_labaled_data.py
tests/: test_plate_recognition.py
