[tool.poetry]
name = "plate-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "plate_recognition"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scrapy = "^2.8.0"
pillow = ">=7.1.2"
jupyterlab = "^3.6.3"
tensorflow = "^2.12.0"
labelbox = {extras = ["data"], version = "^3.45.0"}
update = "^0.0.1"
opencv-python = ">=4.1.1"
matplotlib = ">=3.3"
scikit-learn = "^1.2.2"
requests = ">=2.23.0"
black = "^23.3.0"
gitpython = ">=3.1.30"
numpy = ">=1.18.5"
pyyaml = ">=5.3.1"
scipy = ">=1.4.1"
torchvision = ">=0.8.1"
tqdm = ">=4.64.0"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
torch = "^2.0.0"
ipython = "^8.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
