[tool.poetry]
name = "plate-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "plate_recognition"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scrapy = "^2.8.0"
pillow = ">=7.1.2"
jupyterlab = "^3.6.3"
labelbox = "^3.46.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"
config = "^0.5.1"
torch = "^2.0.1"
pandas = "^2.0.1"
torchvision = "^0.15.2"
ultralytics = "^8.0.105"
gitpython = "^3.1.31"
pyyaml = "^6.0"
tqdm = "^4.65.0"
thop = ">=0.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
